test/tests/stages/14_pointers/invalid_types/bad_null_pointer_constant.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const double(0.0)
  ;
  return
  const int(0)
  ;
  }
